--- a/css.css
+++ b/css.css
@@ -4,34 +4,36 @@ body{
 }
 .navbar{
 	overflow: hidden;
-	background-color: grey;
+	background-color: whitesmoke;
 	padding: 35px 10x;
 	position: fixed;
 	width: 100%;
 	top: 0;
+	margin: 0;
 }
 
-.navbar .about{
-	float: right;
-	text-align: center;
-	padding: 15px;
-	padding-right: 20px;
-	font-size: 15px;
-	line-height: 35px;
-	border-radius: 4px;
-	color: whitesmoke;
-	text-decoration: none;
-}
 
 .navbar .logo{
-	float: left;
+	position: fixed;
+	margin-top: 5px;
+	margin-right: 20px;
 	text-align: center;
-	padding: 12px;
-	padding-left: 15px;
+	padding: 15px;
 	font-size: 35px;
 	line-height: 35px;
 	border-radius: 4px;
 	font-weight: bold;
-	color: whitesmoke;
+	color: #090909;
 	text-decoration: none;
+	font-family: 'Playfair Display', serif;
+}
+
+.navbar input[type=text] {
+  float: right;
+  padding: 15px;
+  border: none;
+  margin-top: 15px;
+  margin-right: 20px;
+  font-size: 15px;
+  font-family: 'Montserrat', sans-serif;
 }
